# lk

./: .gitignore  README.md  data.go  go.mod  install.command  lk.py  lk.zsh  lk_data_example.json  main.go  model.go  pyproject.toml  search.go  styles.go
docs/: bubbletea-black-bg-debug.md
