[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lk"
version = "0.3"
description = "Terminal bookmark manager with TUI"
requires-python = ">=3.11"
dependencies = ["textual>=0.80,<2.0"]

[project.scripts]
lk = "lk:main"

[tool.hatch.build.targets.wheel]
only-include = ["lk.py"]
